# webpage-searcher

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yml
src/: app.py  http.py
src/finders/: __init__.py  finder.py  result.py
src/finders/phrase/: handlers.py  phrase_finder.py
src/finders/url/: url_finder.py
src/outputs/: ouput.py  print_output.py
src/utils/: constants.py  xpath.py
tests/: test_phrase_finder.py  test_url_finder.py  test_xpath.py
tests/files/: designmodo_domain.txt  veza_domain.txt
webpage_searcher/: __init__.py
webpage_searcher/finders/: finder.py  result.py
webpage_searcher/finders/phrase/: handlers.py  phrase_finder.py
webpage_searcher/finders/url/: url_finder.py
webpage_searcher/outputs/: ouput.py  print_output.py
webpage_searcher/utils/: constants.py  xpath.py
