[tool.poetry]
name = "webpage-searcher"
description = "hello"
version = "0.0.0"
readme = "README.md"
authors = ["john-blmns"]
packages = [
    { include = "webpage-searcher" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
bs4 = "0.0.1"
requests = "2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
