[tool.poetry]
name = "webpage-searcher"
description = "hello"
version = "0.0.0"
readme = "README.md"
authors = ["john-blmns"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
bs4 = "0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
black = "22.3.0"
isort = "5.10.1"
flake8 = "4.0.1"
mypy = "0.950.0"
pre-commit-hooks = "4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
