[tool.poetry]
name = "webpage-searcher"
description = "hello"
version = "0.0.0"
readme = "README.md"
authors = ["john-blmns"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
beautifulsoup4 = "4.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
black = "22.3.0"
isort = "5.12.0"
flake8 = "4.0.1"
mypy = "0.950.0"
pre-commit = "2.19.0"
pre-commit-hooks = "4.2.0"
types-beautifulsoup4 = "4.11.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length =110
target-version = ["py39"]
